--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,26 @@
 
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>5.1.0.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>5.1.0.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>5.1.0.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>2.1.0.RELEASE</version>
     </dependency>
 
     <dependency>
@@ -53,22 +71,20 @@
 
     <dependency>
       <groupId>org.hibernate</groupId>
-      <artifactId>hibernate</artifactId>
-      <version>3.0.5</version>
-
-      <!-- This could not be found, apparently there are some license issues - we'll see if it's even needed. -->
-      <exclusions>  
-         <exclusion>  
-           <groupId>javax.transaction</groupId>  
-           <artifactId>jta</artifactId>  
-         </exclusion>  
-       </exclusions>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.3.6.Final</version>
     </dependency>
 
     <dependency>
       <groupId>javax.persistence</groupId>
       <artifactId>javax.persistence-api</artifactId>
       <version>2.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <version>10.14.2.0</version>
     </dependency>
   </dependencies>
 
