--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
   <modules>
     <module>dao</module>
-    <!-- <module>api</module>
-    <module>service</module> -->
+    <module>api</module>
+    <!-- <module>service</module> -->
   </modules>
 </project>
