--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,6 @@
   <modules>
     <module>dao</module>
     <module>api</module>
-    <!-- <module>service</module> -->
+    <module>service</module>
   </modules>
 </project>
