Added Monster facade implementation

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -29,5 +29,10 @@
       <artifactId>dao</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>cz.muni.fi.pa165</groupId>
+      <artifactId>api</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
   </dependencies>
 </project>
