--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,45 @@
     <module>dao</module>
     <module>api</module>
     <module>service</module>
+    <module>rest</module>
+    <module>data</module>
   </modules>
+
+  <dependencies>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>5.1.0.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>5.1.0.RELEASE</version>
+    </dependency>
+  </dependencies>
+  <build>
+    <pluginManagement>
+      <plugins>
+
+        <!-- embedded Tomcat 9 plugin configuration, use "mvn cargo:run" to run -->
+        <plugin>
+          <groupId>org.codehaus.cargo</groupId>
+          <artifactId>cargo-maven2-plugin</artifactId>
+          <version>1.7.0</version>
+          <configuration>
+            <container>
+              <containerId>tomcat9x</containerId>
+              <artifactInstaller>
+                <groupId>org.apache.tomcat</groupId>
+                <artifactId>tomcat</artifactId>
+                <version>9.0.14</version>
+              </artifactInstaller>
+            </container>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
