--- a/web/src/main/resources/Texts.properties
+++ b/web/src/main/resources/Texts.properties
@@ -1,6 +1,20 @@
 index="Home"
 heroes="Heroes"
+hero="Hero"
 footer="<Footer>"
 sign_in="Sign in"
 username="Username"
 password="Password"
+reason="Reason"
+hero.status="Status"
+hero.name="Name"
+hero.gold="Gold"
+hero.hitpoints="HP"
+hero.damage="DMG"
+hero.might="MIG"
+hero.agility="AGI"
+hero.magic="MAG"
+hero.currentQuest=Current Quest
+skills=Skills
+edit=Edit
+save=Save
