--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
     <module>dao</module>
     <module>api</module>
     <module>service</module>
+      <module>rest</module>
+      <module>data</module>
     <module>web</module>
   </modules>
 
