Added Quest controller and view
Signed-off-by: Metodej Klang <metodej.klang@gmail.com>

--- a/web/src/main/resources/Texts.properties
+++ b/web/src/main/resources/Texts.properties
@@ -18,3 +18,15 @@ hero.currentQuest=Current Quest
 skills=Skills
 edit=Edit
 save=Save
+
+
+quests="Quests"
+quest.name="Name"
+quest.location="Location"
+quest.reward="Reward"
+quest.heroLimit="Limit of heroes"
+quest.state="State of quest"
+assignedHeroes="Assigned heroes"
+deadHeroes="Dead heroes"
+monsters="Monsters"
+quest.performanceEvaluation="Performance Evaluation"
