Major fixes and firefigthing, milestone 3 incomplete...

--- a/web/src/main/resources/Texts.properties
+++ b/web/src/main/resources/Texts.properties
@@ -30,3 +30,9 @@ assignedHeroes="Assigned heroes"
 deadHeroes="Dead heroes"
 monsters="Monsters"
 quest.performanceEvaluation="Performance Evaluation"
+
+monsters="Monsters"
+monster.name="Name"
+monster.size="Size"
+monster.hitpoints="Hitpoints"
+monster.damage="Damage"
