--- a/web/pom.xml
+++ b/web/pom.xml
@@ -100,5 +100,10 @@
             <artifactId>data</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+          <groupId> org.hibernate</groupId>
+          <artifactId>hibernate-validator</artifactId>
+          <version>6.0.0.Final</version>
+        </dependency>
     </dependencies>
 </project>
