--- a/web/src/main/resources/Texts.properties
+++ b/web/src/main/resources/Texts.properties
@@ -1,38 +1,36 @@
-index="Home"
-heroes="Heroes"
-hero="Hero"
-footer="<Footer>"
-sign_in="Sign in"
-username="Username"
-password="Password"
-reason="Reason"
-hero.status="Status"
-hero.name="Name"
-hero.gold="Gold"
-hero.hitpoints="HP"
-hero.damage="DMG"
-hero.might="MIG"
-hero.agility="AGI"
-hero.magic="MAG"
+index=Home
+heroes=Heroes
+hero=Hero
+footer=<Footer>
+sign_in=Sign in
+username=Username
+password=Password
+reason=Reason
+hero.status=Status
+hero.name=Name
+hero.gold=Gold
+hero.hitpoints=HP
+hero.damage=DMG
+hero.might=MIG
+hero.agility=AGI
+hero.magic=MAG
 hero.currentQuest=Current Quest
 skills=Skills
 edit=Edit
 save=Save
-
-
-quests="Quests"
-quest.name="Name"
-quest.location="Location"
-quest.reward="Reward"
-quest.heroLimit="Limit of heroes"
-quest.state="State of quest"
-assignedHeroes="Assigned heroes"
-deadHeroes="Dead heroes"
-monsters="Monsters"
-quest.performanceEvaluation="Performance Evaluation"
-
-monsters="Monsters"
-monster.name="Name"
-monster.size="Size"
-monster.hitpoints="Hitpoints"
-monster.damage="Damage"
+quests=Quests
+quest.name=Name
+quest.location=Location
+quest.reward=Reward
+quest.heroLimit=Limit of heroes
+quest.state=State of quest
+assignedHeroes=Assigned heroes
+deadHeroes=Dead heroes
+monsters=Monsters
+quest.performanceEvaluation=Performance Evaluation
+monster.name=Name
+monster.size=Size
+monster.hitpoints=Hitpoints
+monster.damage=Damage
+hero.dead=Dead
+hero.alive=Alive
