fixed monster edit view all

--- a/web/src/main/resources/Texts.properties
+++ b/web/src/main/resources/Texts.properties
@@ -6,6 +6,7 @@ sign_in=Sign in
 username=Username
 password=Password
 reason=Reason
+back=Back
 hero.status=Status
 hero.name=Name
 hero.gold=Gold
@@ -32,5 +33,7 @@ monster.name=Name
 monster.size=Size
 monster.hitpoints=Hitpoints
 monster.damage=Damage
+strengths=Strengths
+weaknesses=Weaknesses
 hero.dead=Dead
 hero.alive=Alive
