Login fix, hero view additions.

--- a/web/src/main/resources/Texts.properties
+++ b/web/src/main/resources/Texts.properties
@@ -1,7 +1,7 @@
 index=Home
 heroes=Heroes
 hero=Hero
-footer=<Footer>
+footer=PA165
 sign_in=Sign in
 username=Username
 password=Password
@@ -37,3 +37,4 @@ strengths=Strengths
 weaknesses=Weaknesses
 hero.dead=Dead
 hero.alive=Alive
+log_out=Log out
