--- a/web/pom.xml
+++ b/web/pom.xml
@@ -26,6 +26,16 @@
                     <container>
                         <containerId>tomcat9x</containerId>
                     </container>
+                    <configuration>
+                        <properties>
+                            <cargo.start.jvmargs>
+                                -Xdebug
+                                -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000
+                                -Xnoagent
+                                -Djava.compiler=NONE
+                            </cargo.start.jvmargs>
+                        </properties>
+                    </configuration>
                 </configuration>
             </plugin>
         </plugins>
