Overnight web fixes. Add content generation.

--- a/web/src/main/resources/Texts.properties
+++ b/web/src/main/resources/Texts.properties
@@ -38,3 +38,8 @@ weaknesses=Weaknesses
 hero.dead=Dead
 hero.alive=Alive
 log_out=Log out
+quest.noheroes=No assigned heroes
+quest.nodeadheroes=No dead heroes
+quest.nomonsters=No monsters
+hero.affinities=Affinities
+hero.addaffinity=Add Affinity
