Add some business logic: in monster view show suitable heroes to defeat it

--- a/web/src/main/resources/Texts.properties
+++ b/web/src/main/resources/Texts.properties
@@ -43,3 +43,4 @@ quest.nodeadheroes=No dead heroes
 quest.nomonsters=No monsters
 hero.affinities=Affinities
 hero.addaffinity=Add Affinity
+heroes.suitable=Suitable heroes
